# NavalBattle

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini
src/: cell.hpp  game_defs.hpp  game_ui.hpp  geometry.hpp  graphic_view.hpp  grid.hpp  move_representation.hpp  naval_battle.cpp  ship.hpp  terminal_view.hpp  teste.cpp.txt  utils.hpp
